Implementing POST in RevenueController
