# src/main/resources/openapi/Family_Budget.yml
@@ -5,7 +5,7 @@ info:
   version: '1.0'
 
 servers:
-  - url: localhost:8000
+  - url: http://localhost:8000
 
 tags:
   - name: Revenue
@@ -36,12 +36,8 @@ paths:
             schema:
               $ref: "#/components/schemas/RevenuePOST"
       responses:
-        '200':
+        '201':
           description: "Successfully created Revenue Entity"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/RevenueGET"
         '400':
           $ref: "#/components/responses/BadRequest"
 
